Finding fix for horizontal scroll on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -5,10 +5,15 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  overflow-x: hidden !important;
+  position: relative !important;
+  width: 100%;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+html,
+body {
+  overflow-x: hidden !important;
 }
